# django_course_6

./: README.md  pyproject.toml
blog/: admin.py  models.py
config/: settings.py  urls.py
fixtures/: blog.json  client.json  gruops.json  mailing.json  message.json  users.json
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/management/commands/: send_mail.py
mailing/services/: send_mail.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailing_confirm_delete.html  mailing_form.html  mailing_list.html  mailinglog_list.html  mailingmessage_confirm_delete.html  mailingmessage_detail.html  mailingmessage_form.html  mailingmessage_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: user_form.html  user_list.html  user_update.html
