[tool.poetry]
name = "django-course-6"
version = "0.1.0"
description = ""
authors = ["Pavel Gornostaev <pavelgornostaeff@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
